tests/errors/second_stage/operation/symbol_constant/symbol_constant.as
; a constant operand doesn't follow a '#'
.define a = 2
mov a, r2
